--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -66,3 +66,16 @@ button:hover {
   padding-top: 50px;
   padding-left: 220px;
 }
+
+
+form {
+	width:50%;
+}
+
+.editForm .ng-invalid {
+  border-left: 5px solid #a94442;
+}
+
+.editForm .ng-valid {
+  border-left: 5px solid #42A948;
+}
