add filter functionality for the list

--- a/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/src/app/contacts/contacts-list/contacts-list.component.html
@@ -1,4 +1,4 @@
-
+<div class="row"><filter-text-box class="navbar-right" (changed)="filterChanged($event)"></filter-text-box></div>
 <ul>
     <li *ngFor="let contact of contacts">
         <div class="col-sm-4" >
